KTTL-2079 - [FE - Small Desktop] Resource Center - Issues with the next button on small desktop (#1263)

--- a/src/theme/css/frontend/carousel/_post-carousel.scss
+++ b/src/theme/css/frontend/carousel/_post-carousel.scss
@@ -212,14 +212,6 @@
         right: theme('container.padding.lg');
       }
     }
-
-    // Hide arrows if there are only 3 cards
-    &.card-count-3 {
-      .swiper-button-next,
-      .swiper-button-prev {
-        @apply hidden;
-      }
-    }
   }
 
   @screen lg2 {
